This version contains: splashscreen. menu
basic start project for Phaser2

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-    "default-language" :                            "en",
-    "font" :                                        "Roboto"
+    "defaultLanguage" :     "en",
+    "font" :                "Roboto"
 }
